# abacus

./: .gitignore  CMakeLists.txt  README.md  abacus.pc.in
.github/workflows/: ci.yaml
examples/: CMakeLists.txt  main.cpp
include/: abacus.h
include/abacus/: datatypes.h  evaluate.h  operand.h  parser.h
src/: CMakeLists.txt  abacus.cpp  abacus.h  ast.h  ast_adapted.h  calculator.cpp  calculator.h  evaluate.cpp  is_evaluatable.cpp  is_evaluatable.h  main.cpp  operand.cpp  operand_pimpl.h  parse.cpp  parse.h  parser.cpp  store.cpp  store.h
src/visitors/: calculator.cpp  calculator.h  is_evaluatable.cpp  is_evaluatable.h  printer.cpp  printer.h
tests/: CMakeLists.txt  main.cpp  test_abacus.cpp  test_parse.cpp  test_parser.cpp  test_printer.cpp  test_store.cpp
